TEST_PROGRAMS/VALID/theo_szymkowiak/valid2.min
# COMPUTE SQUARE OF x

var x: int;
var r: int;

read x;

r = x * x;

print r;

