TEST_PROGRAMS/INVALID/shabbir_hussain/prog5.min
var int: int;

int = 0;

print int;

